# ATCwatch-GB

./: .gitignore  README.md  flake.nix  tasks.py
.arduino/data/: arduino-cli.yaml
ATCwatch/: Makefile  accl.cpp  battery.cpp  ble.cpp  ble.h  display.cpp  heartrate.cpp  menu.cpp  menu_Home.h  menu_Http.h  menu_Log.h  menu_Notify.h  menu_Tracker.h  pinout.h  push.cpp  push.h  sketch.json  sketch.yaml
atc-rust/: .gitignore  Cargo.toml  Makefile  build.rs  cbindgen.toml
atc-rust/arduino_lib/: library.properties
atc-rust/src/: lib.rs
atc-zig/: build.zig
atc-zig/arduino_lib/: library.properties
atc-zig/arduino_lib/src/: atczig.h
atc-zig/src/: main.zig
libraries/: atc-rust  atc-zig  atcntfy  lv_arduino-patch-0001.patch
