[package]
name = "atcrust"
version = "0.1.0"
authors = ["illis <illis@beyond8labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "atcrust"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.20"

[dependencies]
# panic-halt = "0.2.0"

[target.thumbv7em-none-eabihf.dependencies]

[profile.release]
codegen-units = 1
panic = "abort"
opt-level= "s"
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = false

